DevOps_Project_2/Terraform/main.tf
data "aws_ami" "amazon-linux" {
  most_recent = true

  owners = ["137112412989"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_instance" "dev_machine" {
  ami                    = data.aws_ami.amazon-linux.id
  instance_type          = "t2.micro"
  key_name               = "1st_key"

  vpc_security_group_ids = [
    aws_security_group.web_sg.id
  ]

  tags = {
    Environment = "dev"
    Name        = "${var.name}-server"
  }
}
